[project]
name = "open-politics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "textual[dev]>=8.2.7",
]

[project.scripts]
ingest = "app.scripts.ingest:main"
test-retriever = "app.scripts.test_retriever:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]



